Resolved Bug #15379
SVN-Revision: 23923